--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "Smart-Bharat_AI-Assistant",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
