--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,9 @@
-NEXT_PUBLIC_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
-NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyD3LIyx8AiG1vz-ZXkdFuEms4AkQYHiZDA
+NEXT_PUBLIC_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBrYHsYchgDnAUQSaxRQ3wuZo6YVb2934Q
+
+NEXT_PUBLIC_WEATHER_API_KEY=0f236f56a71b442b83b74015251704
+
+NEXT_PUBLIC_HEALTH_API_URL=http://localhost:3000
+NEXT_PUBLIC_HEALTH_API_KEY=31d86d0600004783b1ee7dc8716029dd
+
+
